--- a/3d_editor/3d_editor.csproj
+++ b/3d_editor/3d_editor.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.9.3" />
     <PackageReference Include="OpenTK.GLControl" Version="4.0.2" />
+    <PackageReference Include="StbImageSharp" Version="2.30.15" />
   </ItemGroup>
 
 </Project>
