add cursors for diff mods downgrade OpegGl to 3.1

--- a/3d_editor/3d_editor.csproj
+++ b/3d_editor/3d_editor.csproj
@@ -38,6 +38,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="ImagesAndIcons\free-icon-circle-14448782.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="ImagesAndIcons\free-icon-cross-7699001.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="ImagesAndIcons\free-icon-cylinder-8726474.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Shaders\coordinateGrid.frag">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
